# ninja-game

./: .flake8  .gitignore  .pre-commit-config.yaml  GameClient.py  GameServer.py  README.md  app.py  editor.py  game.py  main_menu.py  map.json  menu.py  menuSystem.py  pyproject.toml  requirements.txt  server.py  settings.py  test.py
.github/workflows/: ci.yml
data/: best_times.json  best_times.txt  collectables.json  menu.json  settings.json  strings.json
data/maps/: 0.json  1.json  10.json  11.json  13.json  14.json  15.json  2.json  20.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  map.json
data/maps-old/: 13.json  14.json  15.json  6.json  7.json  9.json
data/replays/: 1.json
data/saves/: round-0-20241225-165424.json  round-0-20250103-235753.json  round-0-20250119-114328.json  (+49 more)
docs/: architecture.md  backlog.md  code_quality.md  instructions.md  mp-05-game-client-plan.md  multiplayer-brainstorm.md  multiplayer.md  new-game-elements.md  next-update.md  patch.md  patch_github_issues.md  performance_snapshots.md  roadmap_v2.1.md
examples/: train_integration.py
experiments/: benchmark_batch_sim.py  benchmark_interpolation.py
scripts/: asset_manager.py  audio_service.py  batch_sim.py  button.py  clouds.py  collectableManager.py  collectables.py  config.py  constants.py  displayManager.py  effects.py  effects_util.py  entities.py  entity_id.py  feature_extractor.py  genericMenu.py  inputManager.py  input_router.py  keyboardManager.py  launcher.py  level_cache.py  logger.py  multiplayer_menu.py  multiplayer_state.py  particle.py  particle_system.py  perf_hud.py  policy_service.py  prediction_service.py  progress_tracker.py  projectile_system.py  renderer.py  replay.py  reward_shaper.py  rng_service.py  rollback_buffer.py  services.py  settings.py  snapshot.py  spark.py  (+8 more)
tests/: test_advanced_systems.py  test_ai_modular.py  test_asset_manager.py  test_audio_service.py  test_collectable_manager.py  test_collectable_manager_refinements.py  test_constants_usage.py  test_debug_overlay_toggle.py  test_delta_compression.py  test_effects_util.py  test_entity_id.py  test_feature_extractor.py  test_game_client.py  test_game_server.py  test_input_router.py  test_interpolation.py  test_level_cache.py  test_lives_migration.py  test_logger.py  test_menu_init.py  test_mp07_prediction.py  test_multiplayer_integration.py  test_multiplayer_menu.py  test_netsync_service.py  test_new_items.py  test_perf_overlay_throttle.py  test_performance_hud.py  test_physics_separation.py  test_policy_service.py  test_prediction.py  test_progress_tracker.py  test_projectile_system.py  test_renderer_order.py  test_replay_system.py  test_rng_service.py  test_rollback_buffer.py  test_settings_throttle.py  test_snapshot.py  test_state_manager.py  test_state_manager_transitions.py  (+5 more)
tools/: benchmark.py  gen_pixel_art.py  items_e2e.py  items_e2e_bot.py  mp_e2e.py  mp_e2e_bot.py  mp_netem.py
(+27 files in other folders)
