[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120
# Start minimally: only catch likely runtime/syntax issues; expand later.
select = ["E4", "E7", "E9", "F63", "F7", "F82"]
exclude = ["build", "__pycache__"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
# Allow gradual typing adoption
allow_untyped_defs = true
allow_untyped_calls = true

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools", "wheel"]
